--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dotted_line: ^3.1.0
   #Chart
   syncfusion_flutter_charts: ^19.4.50
+  charts_flutter: ^0.12.0
+
 
   #defult package
   cupertino_icons: ^1.0.3
