--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   #Chart
   syncfusion_flutter_charts: ^19.4.50
   charts_flutter: ^0.12.0
+  fl_chart: ^0.45.0
 
 
   #defult package
